# continuum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.ini
scripts/: install.sh  install_deps.sh
src/: AudioFramesource.cc  AudioFramesource.h  Config.cc  Config.h  ContinuumEngine.cc  ContinuumEngine.h  Encoder.cc  Encoder.h  PlaylistManager.cc  PlaylistManager.h  Streamer.cc  Streamer.h  TimelineManager.cc  TimelineManager.h  VideoFramesource.cc  VideoFramesource.h  main.cc
